--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header img{
 main{
     max-width: 36rem;
     width: 90%;
-    margin: 3rem auto;/*Automaticamente ele vai colocar no centro no left e right, e no topo e bottom 3rem*/
+    margin:3rem auto;/*Automaticamente ele vai colocar no centro no left e right, e no topo e bottom 3rem*/
    
 }
 
@@ -43,48 +43,48 @@ section {
 }
 
 section > div {
-    /*Esse sinal quer dizer que ele vai selecionar a primeira div que encontrar na section*/
+    background-color: #2A2634;
     padding: 2rem;
     padding-top: 1.5rem;
     border-radius: 0.5rem;
-    background-color: #2A2634;
 }
 
 section h2 {
     letter-spacing: -0.47px;
 }
 
-section p{
+section p {
     letter-spacing: -0.18px;
     color: #A1A1AA;
 }
 
-/*Animações*/
-
+/* Animações */
 main section {
     opacity: 0;
-    transform: translateY(2rem) ;
+    transform: translateY(2rem);
+
     animation-name: appear;
     animation-duration: 700ms;
     animation-fill-mode: forwards;
 }
 
 @keyframes appear {
-    100% {
+    100%{
         opacity: 1;
         transform: translateY(0);
     }
+
 }
 
 form {
-    display: flex;/*Faz todos elementos estarem em linha*/
-    gap: 0.85rem;/*Coloca espaços entre os elementos*/
-    flex-wrap: wrap;/*Faz dar uma quebra de linha sempre que um container tem conteúdo a mais*/
+    display: flex;
+    gap: 0.8rem;
+    flex-wrap: wrap;
     margin: 1.25rem 0;
 }
 
 input, select {
-    all: unset;/*Com essa linha, eu estou anulando todos estilos dos input's e select*/
+    all: unset;
     border: 2px solid #9147ff;
     border-radius: 0.5rem;
     padding: 0.675rem;
@@ -92,11 +92,11 @@ input, select {
     background-color: #00000066;
 }
 
-input{
+input {
     flex: 1;
 }
 
-button{
+button {
     width: 100%;
     border: 0;
     background-image: linear-gradient(245deg, #9572FC 0%, #43E7AD 50%, #E2D45C 100%);
@@ -104,50 +104,28 @@ button{
     border-radius: 0.5rem;
     font-weight: bold;
     text-transform: uppercase;
-    letter-spacing: 0.12rem;
-    
+    letter-spacing: 0.12px;
     transition: all 0.3s;
 }
 
-button:hover {
+button:hover{
     cursor: pointer;
-    transform: translateY(-2px);
+    transform: translateY(-2px);/*O Elemento irá pra cima*/
     box-shadow: 0 5px 1rem rgba(255, 248, 107, 0.2);
 }
 
-button:disabled {
+button:disabled{
     transition: initial;
     transform: initial;
     box-shadow: initial;
-    cursor: not-allowed;
     color: black;
-}
-
-#aiResponse{
-    background-color: rgb(0, 0, 0, 0.4);
-    border-radius: 0.5rem;
-    padding: 1.25rem;
-    border-left: 4px solid #43E7AD;
-}
-
-#aiResponse ul {
-    padding-left: 1.25rem;
-    opacity: 0.8;
-}
-
-#aiResponse p {
-    color: white;
+    cursor: not-allowed;
 }
 
 .loading {
     animation: pulse 1s infinite;
 }
 
-.hidden {
-    display: none;
-}
-
- 
 @keyframes pulse{
     50%{
         opacity: 0.5;
